force-app/main/default/objects/Opportunity/fields/Competitors_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Name__c</fullName>
    <label>Competitors Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>