force-app/main/default/objects/Opportunity/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>