force-app/main/default/objects/Opportunity/fields/End_Use__c.field-meta.xml
<CustomField>
    <fullName>End_Use__c</fullName>
    <label>End Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>