force-app/main/default/objects/Opportunity/fields/Expected_Sample_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sample_Ready_Date__c</fullName>
    <label>Expected Sample Ready Date</label>
    <type>Date</type>
</CustomField>