force-app/main/default/objects/Opportunity/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>