force-app/main/default/objects/Opportunity/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>In order to create Quote Automatically, check the checkBox.</inlineHelpText>
    <label>Create Quote</label>
    <type>Checkbox</type>
</CustomField>