force-app/main/default/objects/Opportunity/fields/Quote_Hidden_CheckBox__c.field-meta.xml
<CustomField>
    <fullName>Quote_Hidden_CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Hidden CheckBox</label>
    <type>Checkbox</type>
</CustomField>