force-app/main/default/objects/Opportunity/fields/Sample_Ready_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Ready_Close_Date__c</fullName>
    <label>Sample Ready Close Date</label>
    <type>Date</type>
</CustomField>