force-app/main/default/objects/Opportunity/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>