force-app/main/default/objects/Opportunity/fields/Send_to_Plant_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Plant_Close_Date__c</fullName>
    <label>Send to Plant Close Date</label>
    <type>Date</type>
</CustomField>