force-app/main/default/objects/Opportunity/fields/Technical_Specification__c.field-meta.xml
<CustomField>
    <fullName>Technical_Specification__c</fullName>
    <label>Technical Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>