force-app/main/default/objects/Opportunity/recordTypes/Actual_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Actual_Opportunity</fullName>
    <active>true</active>
    <businessProcess>sales process</businessProcess>
    <label>Actual Opportunity</label>
</RecordType>