force-app/main/default/objects/Opportunity/recordTypes/Sample_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Sample_Opportunity</fullName>
    <active>true</active>
    <businessProcess>sales process</businessProcess>
    <label>Sample Opportunity</label>
</RecordType>