force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Validation</fullName>
    <active>true</active>
    <description>In order to make Opportunity closed lost, Closed Lost Reasons and Competitors Name are mandatory.</description>
    <errorConditionFormula>AND(
ISPICKVAL(  StageName , &quot;Closed Lost&quot;),
OR(
ISBLANK ( TEXT(  Closed_Lost_Reasons__c ) ),
ISBLANK (  Competitors_Name__c )
)
)</errorConditionFormula>
    <errorMessage>In order to make Opportunity closed lost, Closed Lost Reasons and Competitors Name are mandatory.</errorMessage>
</ValidationRule>