force-app/main/default/objects/Opportunity/validationRules/Sample_Ready_Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Sample_Ready_Close_Date</fullName>
    <active>true</active>
    <description>Sample Ready Close Date is Mandatory.</description>
    <errorConditionFormula>AND(
ISPICKVAL( StageName , &quot;Sample Ready&quot;),
OR(
ISBLANK ( TEXT( Sample_Ready_Close_Date__c ) )
)
)</errorConditionFormula>
    <errorDisplayField>Sample_Ready_Close_Date__c</errorDisplayField>
    <errorMessage>Sample Ready Close Date is Mandatory.</errorMessage>
</ValidationRule>